<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_nav"
        android:title="@string/home_title" />

    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notification_nav"
        android:title="@string/notifications_title" />

    <item
        android:id="@+id/nav_ask"
        android:title="@string/questions_title" />

    <item
        android:id="@+id/nav_appoints"
        android:icon="@drawable/ic_appointments_nav"
        android:title="@string/appointments_title" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile_nav"
        android:title="@string/profile_title" />

</menu>
